Course_softserve/lection-04/ingress_svc_deploy_hpa.yml
#----------------------------------------------------
#
# Using Ingress - Services - Deployment - HA for runing application
#
# Work with Config Maps and Secrets like environment and volumes
#
# Made by Vitalii Storozh 2021
#
#----------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-project
  labels:
    app: web
    env  : prod
    owner: VitaliiStorozh
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        # image: sv301185/new_one:v_1
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: workdir
          mountPath: "/usr/share/nginx/html"
        - name: config
          mountPath: "/config"
          readOnly: true
        - name: conf
          mountPath: "/conf/hello.txt"
          subPath: "user-interface.properties"
          readOnly: true
        - name: all-in-one
          mountPath: "/projected-volume"
          readOnly: true
        # - mountPath: "/var/www/html"
        #   name: mypd
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          successThreshold: 1
          failureThreshold: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          successThreshold: 1
          failureThreshold: 1
          periodSeconds: 1
      # imagePullSecrets:
      # - name: regcred
      volumes:
      - name: workdir
        emptyDir: {}
      - name: config
        configMap:
          # Provide the name of the ConfigMap you want to mount.
          name: game-demo
          # An array of keys from the ConfigMap to create as files
          items:
          - key: "game.properties"
            path: "game.properties"
          - key: "user-interface.properties"
            path: "user-interface.properties"
      - name: conf
        configMap:
          name: game-demo
          items:
          - key: "user-interface.properties"
            path: "user-interface.properties"
          - key: "game.properties"
            path: "game.properties"
      - name: all-in-one
        projected:
          sources:
          - secret:
              name: secret-basic-auth
          - configMap:
              name: game-demo
      # - name: mypd
      #   persistentVolumeClaim:
      #     claimName: myclaim

---
apiVersion: v1
kind: Service
metadata:
  name: homework-project
  labels:
     env  : prod
     owner: VitaliiStorozh
spec:
  selector:
    app.kubernetes.io/name: myapp
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "www.vitalii.com"
    http:
      paths:
      - pathType: Prefix
        path: "/home"
        backend:
          service:
            name: homework-project
            port:
              number: 80
